--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     *{ box-sizing:border-box; }
     html,body{ height:100%; }
+
     body{
       margin:0;
       font-family:var(--font);
@@ -43,6 +44,16 @@
       padding: max(14px, env(safe-area-inset-top)) 12px max(14px, env(safe-area-inset-bottom));
     }
 
+    /* NEW: sharp blue border around the whole screen (no layout impact) */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      border:3px solid var(--accent);
+      pointer-events:none;
+      z-index:9999;
+    }
+
     .app{
       width:min(520px, 100%);
       display:flex;
@@ -50,12 +61,18 @@
       gap:14px;
     }
 
-    h1{
+    /* NEW: logo replaces the text title (layout preserved via similar margins) */
+    .logoTitle{
       margin:10px 6px 0;
-      font-size: clamp(40px, 7.6vw, 64px);
-      letter-spacing:.4px;
-      color:rgba(235,245,255,.78);
+      display:flex;
+      justify-content:center;
+      align-items:center;
       text-shadow: 0 10px 22px rgba(0,0,0,.35);
+    }
+    .logoTitle svg{
+      width:min(520px, 100%);
+      height:auto;
+      display:block;
     }
 
     .card{
@@ -339,7 +356,35 @@
 
 <body>
   <div class="app">
-    <h1>Vitals Tracker</h1>
+
+    <!-- NEW: Logo title -->
+    <div class="logoTitle" aria-label="Vitals Tracker">
+      <svg viewBox="0 0 900 140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Vitals Tracker">
+        <defs>
+          <linearGradient id="vtg" x1="0" y1="0" x2="1" y2="0">
+            <stop offset="0%" stop-color="#4fa3ff"/>
+            <stop offset="100%" stop-color="#2f78ff"/>
+          </linearGradient>
+          <filter id="vts" x="-20%" y="-20%" width="140%" height="140%">
+            <feDropShadow dx="0" dy="8" stdDeviation="8" flood-color="rgba(0,0,0,.35)"/>
+          </filter>
+        </defs>
+
+        <!-- small mark -->
+        <g transform="translate(46 24)" filter="url(#vts)">
+          <rect x="0" y="0" width="92" height="92" rx="26" fill="rgba(255,255,255,.06)" stroke="rgba(235,245,255,.22)" stroke-width="2"/>
+          <path d="M18 54h18l10-32 16 58 12-36h28" fill="none" stroke="url(#vtg)" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
+        </g>
+
+        <text x="160" y="92"
+              font-family="system-ui,Segoe UI,Roboto,Helvetica,Arial"
+              font-size="76"
+              font-weight="850"
+              fill="url(#vtg)"
+              letter-spacing=".5"
+              filter="url(#vts)">Vitals Tracker</text>
+      </svg>
+    </div>
 
     <!-- HOME -->
     <div id="home" class="card">
@@ -498,16 +543,11 @@
   const screens = ["home","add","log","charts"];
 
   function focusTopOfPanel(screen){
-    // Ensure we're at the top without forcing input focus (prevents keyboard pop on Log).
     window.scrollTo({top:0, left:0, behavior:"auto"});
 
     if(screen === "add"){
-      // Add screen is fine to focus systolic for faster entry.
       setTimeout(() => { try{ $("sys").focus({preventScroll:true}); }catch{} }, 0);
     }
-
-    // LOG: intentionally do NOT focus anything.
-    // CHARTS/HOME: no focus.
   }
 
   function show(screen){
