--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="theme-color" content="#0b1324" />
   <title>Vitals Tracker</title>
 
-  <!-- Minimal PWA hooks (install works when served over https / GitHub Pages) -->
   <link rel="manifest" id="manifestLink" href="#" />
 
   <style>
@@ -20,7 +19,10 @@
       --text:rgba(235,245,255,.86);
       --muted:rgba(235,245,255,.58);
       --muted2:rgba(235,245,255,.42);
-      --accent:#2f78ff;
+
+      /* CHANGE: border is now light blue (less bright) */
+      --accent:#8fc6ff;
+
       --shadow:0 14px 40px rgba(0,0,0,.38);
       --radius:26px;
       --btnH:56px;
@@ -44,7 +46,7 @@
       padding: max(14px, env(safe-area-inset-top)) 12px max(14px, env(safe-area-inset-bottom));
     }
 
-    /* NEW: sharp blue border around the whole screen (no layout impact) */
+    /* Light blue border around the whole screen */
     body::before{
       content:"";
       position:fixed;
@@ -61,7 +63,6 @@
       gap:14px;
     }
 
-    /* NEW: logo replaces the text title (layout preserved via similar margins) */
     .logoTitle{
       margin:10px 6px 0;
       display:flex;
@@ -153,7 +154,6 @@
       line-height:1.25;
     }
 
-    /* Home layout */
     .homeMain{
       display:flex;
       flex-direction:column;
@@ -176,7 +176,6 @@
       color: rgba(235,245,255,.38);
     }
 
-    /* Add screen time line: ONE line, dynamic shrink */
     .timeLine{
       margin: 4px 4px 14px;
       color: rgba(235,245,255,.82);
@@ -201,7 +200,6 @@
       font-size:16px;
     }
 
-    /* Symptoms: smaller, less bold */
     .symGrid{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -253,14 +251,12 @@
       border-bottom-color: rgba(235,245,255,.92);
     }
 
-    /* Buttons just below symptoms */
     .panelButtons{
       display:flex;
       gap:12px;
       margin-top: 10px;
     }
 
-    /* Log entries */
     .entry{
       border:1px solid var(--stroke);
       background: rgba(255,255,255,.03);
@@ -307,7 +303,6 @@
       color: rgba(235,245,255,.70);
     }
 
-    /* Date range */
     .filters{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -330,7 +325,6 @@
       padding-right: 10px;
     }
 
-    /* Charts */
     canvas{
       width:100%;
       height:280px;
@@ -357,7 +351,6 @@
 <body>
   <div class="app">
 
-    <!-- NEW: Logo title -->
     <div class="logoTitle" aria-label="Vitals Tracker">
       <svg viewBox="0 0 900 140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Vitals Tracker">
         <defs>
@@ -370,7 +363,6 @@
           </filter>
         </defs>
 
-        <!-- small mark -->
         <g transform="translate(46 24)" filter="url(#vts)">
           <rect x="0" y="0" width="92" height="92" rx="26" fill="rgba(255,255,255,.06)" stroke="rgba(235,245,255,.22)" stroke-width="2"/>
           <path d="M18 54h18l10-32 16 58 12-36h28" fill="none" stroke="url(#vtg)" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
@@ -386,7 +378,6 @@
       </svg>
     </div>
 
-    <!-- HOME -->
     <div id="home" class="card">
       <div class="homeMain">
         <button id="btnGoAdd" class="btn primary">Add</button>
@@ -408,7 +399,6 @@
       </div>
     </div>
 
-    <!-- ADD -->
     <div id="add" class="card hidden">
       <div id="timeLine" class="timeLine">--:--:-- --, --/--/----</div>
 
@@ -439,7 +429,6 @@
       </div>
     </div>
 
-    <!-- LOG -->
     <div id="log" class="card hidden">
       <div class="row center">
         <button id="btnExportLog" class="btn small">Export</button>
@@ -465,7 +454,6 @@
       <div id="logList"></div>
     </div>
 
-    <!-- CHARTS -->
     <div id="charts" class="card hidden">
       <div class="row center">
         <button id="btnExportCharts" class="btn small">Export</button>
@@ -495,9 +483,6 @@
 (() => {
   "use strict";
 
-  // =========================
-  // Data model + persistence
-  // =========================
   const STORAGE_KEY = "vitals_tracker_records_v1";
   const SYMPTOMS = [
     "Sweaty","Dizzy","Panic","Brain fog","Chest tight","Headache",
@@ -515,7 +500,6 @@
       if(!raw) return [];
       const arr = JSON.parse(raw);
       if(!Array.isArray(arr)) return [];
-      // Always sort MOST RECENT FIRST
       return arr
         .filter(r => r && typeof r.ts === "number")
         .map(r => ({
@@ -536,15 +520,11 @@
     localStorage.setItem(STORAGE_KEY, JSON.stringify(recs));
   }
 
-  // =========================
-  // UI helpers
-  // =========================
   const $ = (id) => document.getElementById(id);
   const screens = ["home","add","log","charts"];
 
   function focusTopOfPanel(screen){
     window.scrollTo({top:0, left:0, behavior:"auto"});
-
     if(screen === "add"){
       setTimeout(() => { try{ $("sys").focus({preventScroll:true}); }catch{} }, 0);
     }
@@ -588,9 +568,6 @@
     return `${time}, ${date}`;
   }
 
-  // =========================
-  // Add screen: symptoms grid
-  // =========================
   const symGrid = $("symGrid");
   const symState = new Map();
 
@@ -655,9 +632,6 @@
     }
   }
 
-  // =========================
-  // Time line: dynamic fit (no wrap)
-  // =========================
   let timeTimer = null;
 
   function tickTime(){
@@ -686,9 +660,6 @@
     }
   }
 
-  // =========================
-  // Log screen: filters + render
-  // =========================
   function parseDateField(v){
     if(!v) return null;
     const [y,m,d] = v.split("-").map(Number);
@@ -717,7 +688,7 @@
   }
 
   function filteredRecords({fromId,toId,searchId}){
-    const recs = loadRecords(); // MOST RECENT FIRST
+    const recs = loadRecords();
     const q = (searchId ? $(searchId).value : "").trim();
 
     const fromV = fromId ? $(fromId).value : "";
@@ -757,7 +728,6 @@
       return;
     }
 
-    // Already most recent first.
     for(const r of recs){
       const e = document.createElement("div");
       e.className = "entry";
@@ -802,11 +772,11 @@
 
       list.appendChild(e);
     }
+
+    // IMPORTANT: no autofocus on log; prevent keyboard pop
+    try { document.activeElement && document.activeElement.blur(); } catch {}
   }
 
-  // =========================
-  // Export
-  // =========================
   function downloadText(text, filename){
     const blob = new Blob([text], {type:"text/plain;charset=utf-8"});
     const url = URL.createObjectURL(blob);
@@ -841,9 +811,6 @@
     }
   }
 
-  // =========================
-  // Charts
-  // =========================
   function roundRect(ctx, x,y,w,h,r, fill, stroke){
     const rr = Math.min(r, w/2, h/2);
     ctx.beginPath();
@@ -911,7 +878,6 @@
     const canvas = $("chart");
     const ctx = canvas.getContext("2d");
 
-    // For charts, we want chronological for plotting.
     const recs = filteredRecords({fromId:"chartFrom", toId:"chartTo", searchId:null}).slice().reverse();
 
     ctx.clearRect(0,0,canvas.width,canvas.height);
@@ -959,7 +925,6 @@
       ctx.fillText(String(val), 16, y+6);
     }
 
-    // X labels: up to 4
     const xCount = recs.length;
     const labelCount = Math.min(4, xCount);
     for(let i=0;i<labelCount;i++){
@@ -975,7 +940,6 @@
     drawSeries(ctx, recs.map(r=>r.dia), yMin, yMax, pad, W, H, "rgba(216,224,240,.88)");
     drawSeries(ctx, recs.map(r=>r.hr ), yMin, yMax, pad, W, H, "rgba(120,220,180,.92)");
 
-    // Legend
     const lx = pad.l + 8;
     let ly = pad.t + 22;
     ctx.font = "18px system-ui,Segoe UI,Roboto";
@@ -991,9 +955,6 @@
     legend("Heart Rate", "rgba(120,220,180,.92)");
   }
 
-  // =========================
-  // Install / "Uninstall" UX
-  // =========================
   let deferredPrompt = null;
 
   window.addEventListener("beforeinstallprompt", (e) => {
@@ -1035,9 +996,6 @@
     alert("Install is available when your browser offers it (menu → Install app).");
   });
 
-  // =========================
-  // Exit
-  // =========================
   $("btnExitHome").addEventListener("click", () => {
     window.close();
     setTimeout(() => {
@@ -1045,9 +1003,6 @@
     }, 200);
   });
 
-  // =========================
-  // Navigation buttons
-  // =========================
   $("btnGoAdd").addEventListener("click", () => show("add"));
   $("btnGoLog").addEventListener("click", () => show("log"));
   $("btnGoCharts").addEventListener("click", () => show("charts"));
@@ -1056,12 +1011,8 @@
   $("btnBackFromLog").addEventListener("click", () => show("home"));
   $("btnBackFromCharts").addEventListener("click", () => show("home"));
 
-  // From log -> add
   $("btnAddFromLog").addEventListener("click", () => show("add"));
 
-  // =========================
-  // Save: Save -> Log, top focus (no input focus on Log)
-  // =========================
   function intOrNull(v){
     const t = String(v).trim();
     if(!t) return null;
@@ -1086,7 +1037,6 @@
     recs.unshift({ ts: Date.now(), sys, dia, hr, notes, symptoms });
     saveRecords(recs);
 
-    // Ensure log defaults show ALL data (blank filters)
     $("fromDate").value = "";
     $("toDate").value = "";
     $("search").value = "";
@@ -1094,9 +1044,6 @@
     show("log");
   });
 
-  // =========================
-  // Filters trigger render
-  // =========================
   ["search","fromDate","toDate"].forEach(id => {
     $(id).addEventListener("input", () => renderLog());
     $(id).addEventListener("change", () => renderLog());
@@ -1106,7 +1053,6 @@
     $(id).addEventListener("change", () => renderCharts());
   });
 
-  // Export buttons
   $("btnExportLog").addEventListener("click", () => {
     const recs = filteredRecords({fromId:"fromDate", toId:"toDate", searchId:"search"});
     exportText(recs);
@@ -1116,9 +1062,6 @@
     exportText(recs);
   });
 
-  // =========================
-  // Manifest + SW (single-file)
-  // =========================
   function injectManifest(){
     const svg =
 `<svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
@@ -1163,9 +1106,6 @@ self.addEventListener('fetch', (e)=>{ });`;
     try { await navigator.serviceWorker.register(swUrl); } catch {}
   }
 
-  // =========================
-  // Init
-  // =========================
   buildSymptoms();
   injectManifest();
   registerSW();
