--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       --muted:rgba(235,245,255,.58);
       --muted2:rgba(235,245,255,.42);
 
-      /* Border color (light blue) */
-      --accent:#8fc6ff;
+      /* Border color (darker than logo, subtle) */
+      --accent:#2b4e7a;
 
       --shadow:0 14px 40px rgba(0,0,0,.38);
       --radius:26px;
@@ -46,7 +46,7 @@
       padding: max(14px, env(safe-area-inset-top)) 12px max(14px, env(safe-area-inset-bottom));
     }
 
-    /* Light blue border around the whole screen */
+    /* Screen border */
     body::before{
       content:"";
       position:fixed;
