--- a/index_v115bu.html
+++ b/index_v115bu.html
@@ -339,7 +339,7 @@
 
 <body>
   <div class="app">
-    <h1>Vitals Tracker</h1>
+    <h1>Vitals Tracker v1.16</h1>
 
     <!-- HOME -->
     <div id="home" class="card">
