--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#0b1324" />
   <title>Vitals Tracker</title>
 
+  <!-- Minimal PWA hooks (install works when served over https / GitHub Pages) -->
   <link rel="manifest" id="manifestLink" href="#" />
 
   <style>
@@ -19,10 +20,7 @@
       --text:rgba(235,245,255,.86);
       --muted:rgba(235,245,255,.58);
       --muted2:rgba(235,245,255,.42);
-
-      /* Border color (darker than logo, subtle) */
-      --accent:#2b4e7a;
-
+      --accent:#2f78ff;
       --shadow:0 14px 40px rgba(0,0,0,.38);
       --radius:26px;
       --btnH:56px;
@@ -32,7 +30,6 @@
 
     *{ box-sizing:border-box; }
     html,body{ height:100%; }
-
     body{
       margin:0;
       font-family:var(--font);
@@ -46,16 +43,6 @@
       padding: max(14px, env(safe-area-inset-top)) 12px max(14px, env(safe-area-inset-bottom));
     }
 
-    /* Screen border */
-    body::before{
-      content:"";
-      position:fixed;
-      inset:0;
-      border:3px solid var(--accent);
-      pointer-events:none;
-      z-index:9999;
-    }
-
     .app{
       width:min(520px, 100%);
       display:flex;
@@ -63,17 +50,12 @@
       gap:14px;
     }
 
-    .logoTitle{
+    h1{
       margin:10px 6px 0;
-      display:flex;
-      justify-content:center;
-      align-items:center;
+      font-size: clamp(40px, 7.6vw, 64px);
+      letter-spacing:.4px;
+      color:rgba(235,245,255,.78);
       text-shadow: 0 10px 22px rgba(0,0,0,.35);
-    }
-    .logoTitle svg{
-      width:min(520px, 100%);
-      height:auto;
-      display:block;
     }
 
     .card{
@@ -101,7 +83,6 @@
       padding:0 18px;
       user-select:none;
       -webkit-tap-highlight-color: transparent;
-      font-size:18px; /* base */
     }
     .btn:active{ transform: translateY(1px); }
     .btn.primary{
@@ -114,7 +95,6 @@
       font-size:14px;
       padding:0 14px;
       font-weight:650;
-      white-space:nowrap;
     }
 
     .row{ display:flex; gap:12px; }
@@ -156,28 +136,20 @@
       line-height:1.25;
     }
 
+    /* Home layout */
     .homeMain{
       display:flex;
       flex-direction:column;
       gap:14px;
       margin-top:8px;
     }
-
-    .homeMain > .btn:not(.small){
-      font-size:26px;
-      font-weight:750;
-      letter-spacing:.3px;
-    }
-
     .homeFooterRow{
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:10px;
+      gap:12px;
       margin-top:8px;
-      flex-wrap:nowrap;
     }
-
     .footerTiny{
       margin-top:10px;
       display:flex;
@@ -187,6 +159,7 @@
       color: rgba(235,245,255,.38);
     }
 
+    /* Add screen time line: ONE line, dynamic shrink */
     .timeLine{
       margin: 4px 4px 14px;
       color: rgba(235,245,255,.82);
@@ -211,6 +184,7 @@
       font-size:16px;
     }
 
+    /* Symptoms: smaller, less bold */
     .symGrid{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -262,12 +236,14 @@
       border-bottom-color: rgba(235,245,255,.92);
     }
 
+    /* Buttons just below symptoms */
     .panelButtons{
       display:flex;
       gap:12px;
       margin-top: 10px;
     }
 
+    /* Log entries */
     .entry{
       border:1px solid var(--stroke);
       background: rgba(255,255,255,.03);
@@ -314,6 +290,7 @@
       color: rgba(235,245,255,.70);
     }
 
+    /* Date range */
     .filters{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -336,6 +313,7 @@
       padding-right: 10px;
     }
 
+    /* Charts */
     canvas{
       width:100%;
       height:280px;
@@ -361,34 +339,9 @@
 
 <body>
   <div class="app">
+    <h1>Vitals Tracker v1.16</h1>
 
-    <div class="logoTitle" aria-label="Vitals Tracker">
-      <svg viewBox="0 0 900 140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Vitals Tracker">
-        <defs>
-          <linearGradient id="vtg" x1="0" y1="0" x2="1" y2="0">
-            <stop offset="0%" stop-color="#4fa3ff"/>
-            <stop offset="100%" stop-color="#2f78ff"/>
-          </linearGradient>
-          <filter id="vts" x="-20%" y="-20%" width="140%" height="140%">
-            <feDropShadow dx="0" dy="8" stdDeviation="8" flood-color="rgba(0,0,0,.35)"/>
-          </filter>
-        </defs>
-
-        <g transform="translate(46 24)" filter="url(#vts)">
-          <rect x="0" y="0" width="92" height="92" rx="26" fill="rgba(255,255,255,.06)" stroke="rgba(235,245,255,.22)" stroke-width="2"/>
-          <path d="M18 54h18l10-32 16 58 12-36h28" fill="none" stroke="url(#vtg)" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/>
-        </g>
-
-        <text x="160" y="92"
-              font-family="system-ui,Segoe UI,Roboto,Helvetica,Arial"
-              font-size="76"
-              font-weight="850"
-              fill="url(#vtg)"
-              letter-spacing=".5"
-              filter="url(#vts)">Vitals Tracker</text>
-      </svg>
-    </div>
-
+    <!-- HOME -->
     <div id="home" class="card">
       <div class="homeMain">
         <button id="btnGoAdd" class="btn primary">Add</button>
@@ -397,7 +350,6 @@
 
         <div class="homeFooterRow">
           <button id="btnInstall" class="btn small">Install</button>
-          <button id="btnClearAll" class="btn small">Clear Data</button>
           <div class="grow"></div>
           <button id="btnExitHome" class="btn small">Exit</button>
         </div>
@@ -405,12 +357,13 @@
         <div class="subtle">Data stays on your phone (local only).</div>
 
         <div class="footerTiny">
-          <div>v1.16</div>
+          <div>v1.15</div>
           <div>developed by Keyth Jyles</div>
         </div>
       </div>
     </div>
 
+    <!-- ADD -->
     <div id="add" class="card hidden">
       <div id="timeLine" class="timeLine">--:--:-- --, --/--/----</div>
 
@@ -441,6 +394,7 @@
       </div>
     </div>
 
+    <!-- LOG -->
     <div id="log" class="card hidden">
       <div class="row center">
         <button id="btnExportLog" class="btn small">Export</button>
@@ -466,6 +420,7 @@
       <div id="logList"></div>
     </div>
 
+    <!-- CHARTS -->
     <div id="charts" class="card hidden">
       <div class="row center">
         <button id="btnExportCharts" class="btn small">Export</button>
@@ -495,6 +450,9 @@
 (() => {
   "use strict";
 
+  // =========================
+  // Data model + persistence
+  // =========================
   const STORAGE_KEY = "vitals_tracker_records_v1";
   const SYMPTOMS = [
     "Sweaty","Dizzy","Panic","Brain fog","Chest tight","Headache",
@@ -512,6 +470,7 @@
       if(!raw) return [];
       const arr = JSON.parse(raw);
       if(!Array.isArray(arr)) return [];
+      // Always sort MOST RECENT FIRST
       return arr
         .filter(r => r && typeof r.ts === "number")
         .map(r => ({
@@ -532,14 +491,23 @@
     localStorage.setItem(STORAGE_KEY, JSON.stringify(recs));
   }
 
+  // =========================
+  // UI helpers
+  // =========================
   const $ = (id) => document.getElementById(id);
   const screens = ["home","add","log","charts"];
 
   function focusTopOfPanel(screen){
+    // Ensure we're at the top without forcing input focus (prevents keyboard pop on Log).
     window.scrollTo({top:0, left:0, behavior:"auto"});
+
     if(screen === "add"){
+      // Add screen is fine to focus systolic for faster entry.
       setTimeout(() => { try{ $("sys").focus({preventScroll:true}); }catch{} }, 0);
     }
+
+    // LOG: intentionally do NOT focus anything.
+    // CHARTS/HOME: no focus.
   }
 
   function show(screen){
@@ -580,6 +548,9 @@
     return `${time}, ${date}`;
   }
 
+  // =========================
+  // Add screen: symptoms grid
+  // =========================
   const symGrid = $("symGrid");
   const symState = new Map();
 
@@ -644,6 +615,9 @@
     }
   }
 
+  // =========================
+  // Time line: dynamic fit (no wrap)
+  // =========================
   let timeTimer = null;
 
   function tickTime(){
@@ -672,6 +646,9 @@
     }
   }
 
+  // =========================
+  // Log screen: filters + render
+  // =========================
   function parseDateField(v){
     if(!v) return null;
     const [y,m,d] = v.split("-").map(Number);
@@ -700,7 +677,7 @@
   }
 
   function filteredRecords({fromId,toId,searchId}){
-    const recs = loadRecords();
+    const recs = loadRecords(); // MOST RECENT FIRST
     const q = (searchId ? $(searchId).value : "").trim();
 
     const fromV = fromId ? $(fromId).value : "";
@@ -740,6 +717,7 @@
       return;
     }
 
+    // Already most recent first.
     for(const r of recs){
       const e = document.createElement("div");
       e.className = "entry";
@@ -784,10 +762,11 @@
 
       list.appendChild(e);
     }
-
-    try { document.activeElement && document.activeElement.blur(); } catch {}
   }
 
+  // =========================
+  // Export
+  // =========================
   function downloadText(text, filename){
     const blob = new Blob([text], {type:"text/plain;charset=utf-8"});
     const url = URL.createObjectURL(blob);
@@ -822,6 +801,9 @@
     }
   }
 
+  // =========================
+  // Charts
+  // =========================
   function roundRect(ctx, x,y,w,h,r, fill, stroke){
     const rr = Math.min(r, w/2, h/2);
     ctx.beginPath();
@@ -889,6 +871,7 @@
     const canvas = $("chart");
     const ctx = canvas.getContext("2d");
 
+    // For charts, we want chronological for plotting.
     const recs = filteredRecords({fromId:"chartFrom", toId:"chartTo", searchId:null}).slice().reverse();
 
     ctx.clearRect(0,0,canvas.width,canvas.height);
@@ -936,6 +919,7 @@
       ctx.fillText(String(val), 16, y+6);
     }
 
+    // X labels: up to 4
     const xCount = recs.length;
     const labelCount = Math.min(4, xCount);
     for(let i=0;i<labelCount;i++){
@@ -951,6 +935,7 @@
     drawSeries(ctx, recs.map(r=>r.dia), yMin, yMax, pad, W, H, "rgba(216,224,240,.88)");
     drawSeries(ctx, recs.map(r=>r.hr ), yMin, yMax, pad, W, H, "rgba(120,220,180,.92)");
 
+    // Legend
     const lx = pad.l + 8;
     let ly = pad.t + 22;
     ctx.font = "18px system-ui,Segoe UI,Roboto";
@@ -966,32 +951,9 @@
     legend("Heart Rate", "rgba(120,220,180,.92)");
   }
 
-  function clearFilters(){
-    $("fromDate").value = "";
-    $("toDate").value = "";
-    $("search").value = "";
-    $("chartFrom").value = "";
-    $("chartTo").value = "";
-  }
-
-  function clearAllData(){
-    const ok = confirm(
-      "Clear ALL saved vitals data?\n\n" +
-      "This deletes everything stored on this phone for Vitals Tracker.\n" +
-      "This cannot be undone."
-    );
-    if(!ok) return;
-
-    try{
-      localStorage.removeItem(STORAGE_KEY);
-    }catch{}
-
-    clearFilters();
-
-    alert("All data cleared.");
-    show("home");
-  }
-
+  // =========================
+  // Install / "Uninstall" UX
+  // =========================
   let deferredPrompt = null;
 
   window.addEventListener("beforeinstallprompt", (e) => {
@@ -1019,7 +981,7 @@
         "Uninstall:\n\n" +
         "Android: press-and-hold the app icon → Uninstall.\n" +
         "Uninstall typically does NOT delete your saved data, but device/browser behavior can vary.\n\n" +
-        "To delete data on purpose: use Clear Data (home screen)."
+        "To delete data on purpose: clear site storage in your browser settings."
       );
       return;
     }
@@ -1033,8 +995,9 @@
     alert("Install is available when your browser offers it (menu → Install app).");
   });
 
-  $("btnClearAll").addEventListener("click", clearAllData);
-
+  // =========================
+  // Exit
+  // =========================
   $("btnExitHome").addEventListener("click", () => {
     window.close();
     setTimeout(() => {
@@ -1042,6 +1005,9 @@
     }, 200);
   });
 
+  // =========================
+  // Navigation buttons
+  // =========================
   $("btnGoAdd").addEventListener("click", () => show("add"));
   $("btnGoLog").addEventListener("click", () => show("log"));
   $("btnGoCharts").addEventListener("click", () => show("charts"));
@@ -1050,8 +1016,12 @@
   $("btnBackFromLog").addEventListener("click", () => show("home"));
   $("btnBackFromCharts").addEventListener("click", () => show("home"));
 
+  // From log -> add
   $("btnAddFromLog").addEventListener("click", () => show("add"));
 
+  // =========================
+  // Save: Save -> Log, top focus (no input focus on Log)
+  // =========================
   function intOrNull(v){
     const t = String(v).trim();
     if(!t) return null;
@@ -1076,6 +1046,7 @@
     recs.unshift({ ts: Date.now(), sys, dia, hr, notes, symptoms });
     saveRecords(recs);
 
+    // Ensure log defaults show ALL data (blank filters)
     $("fromDate").value = "";
     $("toDate").value = "";
     $("search").value = "";
@@ -1083,6 +1054,9 @@
     show("log");
   });
 
+  // =========================
+  // Filters trigger render
+  // =========================
   ["search","fromDate","toDate"].forEach(id => {
     $(id).addEventListener("input", () => renderLog());
     $(id).addEventListener("change", () => renderLog());
@@ -1092,6 +1066,7 @@
     $(id).addEventListener("change", () => renderCharts());
   });
 
+  // Export buttons
   $("btnExportLog").addEventListener("click", () => {
     const recs = filteredRecords({fromId:"fromDate", toId:"toDate", searchId:"search"});
     exportText(recs);
@@ -1101,6 +1076,9 @@
     exportText(recs);
   });
 
+  // =========================
+  // Manifest + SW (single-file)
+  // =========================
   function injectManifest(){
     const svg =
 `<svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
@@ -1145,6 +1123,9 @@ self.addEventListener('fetch', (e)=>{ });`;
     try { await navigator.serviceWorker.register(swUrl); } catch {}
   }
 
+  // =========================
+  // Init
+  // =========================
   buildSymptoms();
   injectManifest();
   registerSW();
@@ -1164,5 +1145,3 @@ self.addEventListener('fetch', (e)=>{ });`;
 })();
 </script>
 </body>
-</html>
-```0
